fdo#76710: Adjust sheet position of conditional format entries.

When inserting or deleting sheets.

Change-Id: Ibf898350e22f092ec38b75ad98957832a5580e6a